--- a/_header.scss
+++ b/_header.scss
@@ -60,14 +60,20 @@ $phone-portrait: 360px;
 	box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
   padding: 0 30px;
   background: $Navy;
-  // position: fixed;
-  // width: 100%;
-  // z-index: 1;
 
   @include media (null, $phone-portrait){
     padding: 0 10px;
   }
 }
+
+@media (max-width: 960px){
+  body.js .genesis-responsive-menu{
+    display: none;
+
+  }
+
+}
+
 
 
 /* Title Area
@@ -101,7 +107,7 @@ $phone-portrait: 360px;
   @include media (null, $phone-portrait){
     position: relative;
     top: 6px;
-    right: 10px;
+    // right: 10px;
     max-width: 200px !important;
   }
 
