--- a/_variables.scss
+++ b/_variables.scss
@@ -22,7 +22,7 @@ $h5-size: 20px;
 $h6-size: 18px;
 $h7-size: 16px;
 
-$letter-spacing: 1.38px;
+$letter-spacing: 1.58px;
 
 // Layout - see front-page for responsive site wrappers
 $site-wrapper: 0 6rem;
